Fixes #294 - [Questionnaire] Skip logic select input in multiple choice steps are misaligned

--- a/web/static/css/_ncd.scss
+++ b/web/static/css/_ncd.scss
@@ -650,11 +650,11 @@ i.survey-status {
     position: relative;
     width: 25px;
     &:after {
-      content: 'keyboard_arrow_down';
+      content: 'arrow_drop_down';
       font-family: 'Material Icons';
-      @extend .black-text;
+      @extend .grey-text;
       font-size: 20px;
-      line-height: 1;
+      line-height: .4;
       position: absolute;
       top: 0;
       right: 0;
